# haskellbook-exercises

./: README.md  ch10database.hs  ch11btree.hs  ch11cipher.hs  ch11huttonrazor.hs  ch11jammin.hs  ch11phone.hs  ch11prog.hs  ch11sumtypes.hs  ch11vehicles.hs  ch12.hs  ch12nat.hs  ch15monoids.hs  ch16functors.hs  ch17applicative.hs  ch17applicative2.hs  ch18monad.hs  ch20foldable.hs  ch21traversable.hs  ch22reader.hs  ch23state.hs  ch25composetypes.hs  ch26monadtrans.hs  ch26monadtrans2.hs  ch9.hs  ciphers.hs
addition/: Addition.hs  addition.cabal
ch17laws/: ch17laws.cabal  stack.yaml
ch17laws/src/: Main.hs
ch17laws2/: ch17laws2.cabal
ch17laws2/src/: Main.hs
ch24parse/: ch24parse.cabal
ch24parse/src/: Lib.hs
ch26scotty/: README.md  ch26scotty.cabal
ch26scotty/src/: Main.hs
hangman/: hangman.cabal  stack.yaml
hangman/data/: espanol.txt
hangman/src/: Main.hs
morse/: morse.cabal  stack.yaml
morse/app/: Main.hs
morse/src/: Morse.hs
morse/test/: Spec.hs
webapp19/: stack.yaml  webapp19.cabal
webapp19/src/: Main.hs  Todo.hs
