name:                hangman
version:             0.1.0.0
synopsis:            You will be hanged if you do not guess the word!
description:         Please see README.md
homepage:            https://github.com/nettok/hangman#readme
license:             GPL
license-file:        LICENSE
author:              Nettok
maintainer:          pyalec@gmail.com
copyright:           2016 Nettok
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1 && < 2
                     , split >= 0.2.3 && < 0.3.0
