name:                webapp19
version:             0.1.0.0
synopsis:            Simple webapp as exercise for chapter 19
description:         Please see README.md
homepage:            https://github.com/githubuser/webapp19#readme
license:             BSD3
license-file:        LICENSE
author:              Ernesto Menendez
maintainer:          pyalec@gmail.com
copyright:           2016 Ernesto Menendez
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable webapp19
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Todo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , servant-server == 0.8
                     , warp == 3.2.7
                     , time == 1.6.0.1
                     , aeson == 0.11.2.0
                     , aeson-compat == 0.3.5.1
                     , aeson-pretty == 0.8.1
                     , hedis == 0.9.1
                     , bytestring == 0.10.8.1
                     , text == 1.2.2.1
                     , containers == 0.5.7.1
                     , cmdargs == 0.10.14
                     , hex == 0.1.2
